--- a/Alscient-AWS-Assignment-CloudFormation-v20191203.yaml
+++ b/Alscient-AWS-Assignment-CloudFormation-v20191203.yaml
@@ -11,8 +11,6 @@ Description: |
   your document/presentation and before your interview.
 
 Parameters:
-
-
   CandidateName:
     Description: 'Please input your first and last name:'
     Type: String
@@ -21,8 +19,6 @@ Parameters:
     ConstraintDescription: Please input your full name.
 
 Resources:
-
-
     SAVPC:
       Type: AWS::EC2::VPC
       Properties:
@@ -156,7 +152,7 @@ Resources:
     SAelb:
       Type: AWS::ElasticLoadBalancing::LoadBalancer
       Properties:
-        Subnets: [!Ref 'PublicSubnetB']
+        Subnets: [!Ref 'PublicSubnetB', !Ref 'PublicSubnetA']
         Instances: [!Ref 'SAInstance1']
         SecurityGroups: [!Ref 'SASGELB']
         Listeners:
@@ -166,9 +162,10 @@ Resources:
         HealthCheck:
           HealthyThreshold: '2'
           Interval: '15'
-          Target: TCP:443
+          Target: TCP:80
           Timeout: '5'
           UnhealthyThreshold: '2'
+        CrossZone: 'True'
         Tags:
           - Key: environment
             Value: Alscient-Aws-SA-Assignment
@@ -180,6 +177,11 @@ Resources:
       Properties:
         GroupDescription: SA Assignment - ELB security group
         VpcId: !Ref 'SAVPC'
+        SecurityGroupIngress:
+          - IpProtocol: tcp
+            FromPort: 80
+            ToPort: 80
+            CidrIp: 0.0.0.0/0
         Tags:
           - Key: environment
             Value: Alscient-Aws-SA-Assignment
@@ -191,6 +193,11 @@ Resources:
       Properties:
         GroupDescription: SA Assignment - App server security group
         VpcId: !Ref 'SAVPC'
+        SecurityGroupIngress:
+          - IpProtocol: tcp
+            FromPort: 80
+            ToPort: 80
+            SourceSecurityGroupId: !Ref 'SASGELB'
         Tags:
           - Key: environment
             Value: Alscient-Aws-SA-Assignment
@@ -280,8 +287,6 @@ Resources:
 
     
 Outputs:
-
-
   LoadBalancerDNSName:
     Description: The DNSName of the load balancer
     Value: !GetAtt SAelb.DNSName
