--- a/Alscient-AWS-Assignment-CloudFormation-v20191203.yaml
+++ b/Alscient-AWS-Assignment-CloudFormation-v20191203.yaml
@@ -305,6 +305,25 @@ Resources:
           - Key: Name
             PropagateAtLaunch: 'True'
             Value: !Join ['-', [WebServer, !Ref 'CandidateName']]
+
+    SAASGScaleOutPolicy: 
+      Type: AWS::AutoScaling::ScalingPolicy
+      Properties: 
+        AdjustmentType: "ChangeInCapacity"
+        PolicyType: "SimpleScaling"
+        Cooldown: "300"
+        AutoScalingGroupName: !Ref 'SAAWebServerGroup'
+        ScalingAdjustment: 1
+
+    SAASGScaleInPolicy: 
+      Type: AWS::AutoScaling::ScalingPolicy
+      Properties: 
+        AdjustmentType: "ChangeInCapacity"
+        PolicyType: "SimpleScaling"
+        Cooldown: "300"
+        AutoScalingGroupName: !Ref 'SAAWebServerGroup'
+        ScalingAdjustment: -1
+            
   
     SALaunchConfig:
       Type: AWS::AutoScaling::LaunchConfiguration
@@ -340,6 +359,39 @@ Resources:
             Value: Alscient-Aws-SA-Assignment
           - Key: Name
             Value: AppServerSecurityGroup
+
+    SABastionHost:
+      Type: AWS::EC2::Instance
+      Properties:
+        DisableApiTermination: 'false'
+        InstanceInitiatedShutdownBehavior: stop
+        ImageId: ami-70edb016
+        InstanceType: t2.micro
+        KeyName: 'EC2KP'
+        Monitoring: 'false'
+        #SubnetId: !Ref 'PublicSubnetA'
+        SecurityGroups: [!Ref 'SASGBastionHost']
+        Tags:
+          - Key: environment
+            Value: Alscient-Aws-SA-Assignment
+          - Key: Name
+            Value: !Join ['-', [BastionHost, !Ref 'CandidateName']]
+
+    SASGBastionHost:
+      Type: AWS::EC2::SecurityGroup
+      Properties:
+        GroupDescription: SA Assignment - Bastion host Security Group
+        VpcId: !Ref 'SAVPC'
+        SecurityGroupIngress:
+          - IpProtocol: tcp
+            FromPort: 22
+            ToPort: 22
+            CidrIp: 0.0.0.0/0
+        Tags:
+          - Key: environment
+            Value: Alscient-Aws-SA-Assignment
+          - Key: Name
+            Value: BastionHostSecurityGroup
 
     
 Outputs:
