Added dependson to prevent EC2s from bootstrapping without NAT gateway active

--- a/Alscient-AWS-Assignment-CloudFormation-v20191203.yaml
+++ b/Alscient-AWS-Assignment-CloudFormation-v20191203.yaml
@@ -375,6 +375,7 @@ Resources:
               cd /var/www/html/
               sudo echo '<html><h1>Hello world!</h1></html>' > index.html
               service httpd start
+      DependsOn: SANATGw
 
     SASGApp:
       Type: AWS::EC2::SecurityGroup
