--- a/Alscient-AWS-Assignment-CloudFormation-v20191203.yaml
+++ b/Alscient-AWS-Assignment-CloudFormation-v20191203.yaml
@@ -297,6 +297,8 @@ Resources:
         MinSize: '2'
         MaxSize: '4'
         DesiredCapacity: '2'
+        HealthCheckGracePeriod: 120
+        HealthCheckType: 'ELB'
         TargetGroupARNs: [!Ref 'SAAppLBTargetGroup']
         Tags: 
           - Key: environment
