--- a/Alscient-AWS-Assignment-CloudFormation-v20191203.yaml
+++ b/Alscient-AWS-Assignment-CloudFormation-v20191203.yaml
@@ -19,6 +19,30 @@ Parameters:
     MaxLength: '50'
     MinLength: '3'
     ConstraintDescription: Please input your full name.
+  DBName:
+    Default: mydb
+    Description: My database
+    Type: String
+    MinLength: '1'
+    MaxLength: '64'
+    AllowedPattern: '[a-zA-Z][a-zA-Z0-9]*'
+    ConstraintDescription: Must begin with a letter and contain only alphanumeric characters.
+  DBUsername:
+    NoEcho: 'true'
+    Description: Username for MySQL database access
+    Type: String
+    MinLength: '1'
+    MaxLength: '16'
+    AllowedPattern: '[a-zA-Z][a-zA-Z0-9]*'
+    ConstraintDescription: must begin with a letter and contain only alphanumeric characters.
+  DBPassword:
+    NoEcho: 'true'
+    Description: Password MySQL database access
+    Type: String
+    MinLength: '8'
+    MaxLength: '41'
+    AllowedPattern: '[a-zA-Z0-9]*'
+    ConstraintDescription: must contain only alphanumeric characters.
 
 Resources:
 
@@ -356,8 +380,7 @@ Resources:
         ComparisonOperator: LessThanThreshold
         Dimensions:
         - Name: AutoScalingGroupName
-          Value: !Ref "SAAWebServerGroup"
-            
+          Value: !Ref "SAAWebServerGroup"   
   
     SALaunchConfig:
       Type: AWS::AutoScaling::LaunchConfiguration
@@ -394,7 +417,49 @@ Resources:
             Value: Alscient-Aws-SA-Assignment
           - Key: Name
             Value: AppServerSecurityGroup
+ 
+    SARDSSQLDB:
+      Type: 'AWS::RDS::DBInstance'
+      Properties:
+        DBInstanceIdentifier: 'my-sql-instance'
+        DBName: !Ref DBName
+        DBInstanceClass: db.t2.micro	
+        AllocatedStorage: '10'
+        Engine: MySQL
+        EngineVersion: 8.0.16
+        MasterUsername: !Ref DBUsername
+        MasterUserPassword: !Ref DBPassword
+        VPCSecurityGroups: [ !Ref SARDSSG ]
+        AvailabilityZone: eu-west-1a
+        #MonitoringInterval: '60'
+        #MonitoringRoleArn: 'arn:aws:iam::123456789012:role/rds-monitoring-role'
 
+    SARDSReadReplica: 
+      Type: "AWS::RDS::DBInstance"
+      Properties: 
+        DBInstanceClass: db.t2.micro	
+        #KmsKeyId: MyKey
+        SourceDBInstanceIdentifier: !Ref SARDSSQLDB
+        VPCSecurityGroups: [ !Ref SARDSSG ]
+        AvailabilityZone: eu-west-1b
+        #SourceRegion: SourceRegion
+
+    SARDSSG:
+      Type: AWS::EC2::SecurityGroup
+      Properties:
+        GroupDescription: SA Assignment - SQL Database security group
+        VpcId: !Ref 'SAVPC'
+        SecurityGroupIngress:
+          - IpProtocol: tcp
+            FromPort: 3389
+            ToPort: 3389
+            SourceSecurityGroupId: !Ref 'SASGApp'
+        Tags:
+          - Key: environment
+            Value: Alscient-Aws-SA-Assignment
+          - Key: Name
+            Value: SQLSecurityGroup
+      
     
 
     
