--- a/Alscient-AWS-Assignment-CloudFormation-v20191203.yaml
+++ b/Alscient-AWS-Assignment-CloudFormation-v20191203.yaml
@@ -43,6 +43,11 @@ Parameters:
     MaxLength: '41'
     AllowedPattern: '[a-zA-Z0-9]*'
     ConstraintDescription: must contain only alphanumeric characters.
+  RemoteAccessCIDR:
+    AllowedPattern: ^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/([0-9]|[1-2][0-9]|3[0-2]))$
+    ConstraintDescription: CIDR block parameter must be in the form x.x.x.x/x
+    Description: Allowed CIDR block for external SSH access to the bastion host.
+    Type: String
 
 Resources:
 
@@ -412,12 +417,28 @@ Resources:
             FromPort: 80
             ToPort: 80
             SourceSecurityGroupId: !Ref 'SASGAppLB'
+          - IpProtocol: tcp
+            FromPort: 22
+            ToPort: 22
+            SourceSecurityGroupId: !Ref 'SASGBastionHost'
         Tags:
           - Key: environment
             Value: Alscient-Aws-SA-Assignment
           - Key: Name
             Value: AppServerSecurityGroup
- 
+
+    SADBSubnetGroup:
+      Type: AWS::RDS::DBSubnetGroup
+      Properties: 
+        DBSubnetGroupDescription: Subnet group for MySQL instances
+        DBSubnetGroupName: my-sql-subnet-group
+        SubnetIds: [ !Ref PrivateSubnetA, !Ref PrivateSubnetB]
+        Tags: 
+          - Key: environment
+            Value: Alscient-Aws-SA-Assignment
+          - Key: Name
+            Value: SQLSubnetGroup
+
     SARDSSQLDB:
       Type: 'AWS::RDS::DBInstance'
       Properties:
@@ -431,6 +452,7 @@ Resources:
         MasterUserPassword: !Ref DBPassword
         VPCSecurityGroups: [ !Ref SARDSSG ]
         AvailabilityZone: eu-west-1a
+        DBSubnetGroupName: !Ref SADBSubnetGroup
         #MonitoringInterval: '60'
         #MonitoringRoleArn: 'arn:aws:iam::123456789012:role/rds-monitoring-role'
 
@@ -438,11 +460,9 @@ Resources:
       Type: "AWS::RDS::DBInstance"
       Properties: 
         DBInstanceClass: db.t2.micro	
-        #KmsKeyId: MyKey
         SourceDBInstanceIdentifier: !Ref SARDSSQLDB
         VPCSecurityGroups: [ !Ref SARDSSG ]
         AvailabilityZone: eu-west-1b
-        #SourceRegion: SourceRegion
 
     SARDSSG:
       Type: AWS::EC2::SecurityGroup
@@ -451,16 +471,51 @@ Resources:
         VpcId: !Ref 'SAVPC'
         SecurityGroupIngress:
           - IpProtocol: tcp
-            FromPort: 3389
-            ToPort: 3389
+            FromPort: 3306
+            ToPort: 3306
             SourceSecurityGroupId: !Ref 'SASGApp'
+          - IpProtocol: tcp
+            FromPort: 3306
+            ToPort: 3306
+            SourceSecurityGroupId: !Ref 'SASGBastionHost'
         Tags:
           - Key: environment
             Value: Alscient-Aws-SA-Assignment
           - Key: Name
             Value: SQLSecurityGroup
-      
-    
+
+    SABastionHost: 
+      Type: AWS::EC2::Instance
+      Properties: 
+        ImageId: ami-70edb016
+        InstanceType: t2.micro
+        KeyName: EC2KP
+        NetworkInterfaces: 
+          - AssociatePublicIpAddress: "true"
+            DeviceIndex: "0"
+            GroupSet: [ !Ref SASGBastionHost ]
+            SubnetId: !Ref PublicSubnetA
+        Tags:
+          - Key: environment
+            Value: Alscient-Aws-SA-Assignment
+          - Key: Name
+            Value: SA-BastionHost
+
+    SASGBastionHost:
+      Type: AWS::EC2::SecurityGroup
+      Properties:
+        GroupDescription: SA Assignment - Bastion host Security Group
+        VpcId: !Ref 'SAVPC'
+        SecurityGroupIngress:
+          - IpProtocol: tcp
+            FromPort: 22
+            ToPort: 22
+            CidrIp: !Ref RemoteAccessCIDR
+        Tags:
+          - Key: environment
+            Value: Alscient-Aws-SA-Assignment
+          - Key: Name
+            Value: BastionHostSecurityGroup
 
     
 Outputs:
